--- a/views/user/signout.ejs
+++ b/views/user/signout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <% include ../partials/head.ejs %>
+    <% include ../partials/adminHead.ejs %>
     
   </head>
   <body>
