--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -12,7 +12,7 @@
 .profile-img {
 
   max-width: 300px;
-  margin-bottom: -100px;
+  /* margin-bottom: -100px; */
 }
 
 .profile-img img {
@@ -24,5 +24,5 @@
 
 .fold {
 
-  height: 540px;
+  /* height: 540px; */
 }
