--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <%- include partials/head.ejs %>
-  <link rel="stylesheet" href="css/about.css">
+  <link rel="stylesheet" href="stylesheets/about.css">
 </head>
 
 <body>
@@ -46,9 +46,9 @@
 
           <div id="life" class="aboutDetails details text-wrap">
             <ul class="aboutType">
-              <li><a id="focusSection" href="about.html#life">Life</a></li>
-              <li><a id="" href="about.html#education">Education</a></li>
-              <li><a id="" href="about.html#experience">Experience</a></li>
+              <li><a id="life-btn focusSection" href="about#life">Life</a></li>
+              <li><a id="ed-btn" href="about#education">Education</a></li>
+              <li><a id="ex-btn" href="about#experience">Experience</a></li>
             </ul>
 
             <!-- Life Section -->
@@ -61,9 +61,9 @@
 
           <div id="education" class="aboutDetails details text-wrap">
             <ul class="aboutType">
-              <li><a id="" href="about.html#life">Life</a></li>
-              <li><a id="focusSection" href="about.html#education">Education</a></li>
-              <li><a id="" href="about.html#experience">Experience</a></li>
+              <li><a id="life-btn" href="about#life">Life</a></li>
+              <li><a id="ed-btn focusSection" href="about#education">Education</a></li>
+              <li><a id="ex-btn" href="about#experience">Experience</a></li>
             </ul>
 
             <!-- Education Section -->
@@ -77,9 +77,9 @@
 
           <div id="experience" class="aboutDetails details text-wrap">
             <ul class="aboutType">
-              <li><a id="" href="about.html#life">Life</a></li>
-              <li><a id="" href="about.html#education">Education</a></li>
-              <li><a id="focusSection" href="about.html#experience">Experience</a></li>
+              <li><a id="life-btn" href="about#life">Life</a></li>
+              <li><a id="ed-btn" href="about#education">Education</a></li>
+              <li><a id="ex-btn focusSection" href="about#experience">Experience</a></li>
             </ul>
 
             <!-- Experience Section -->
@@ -114,6 +114,7 @@
 
 
   <%- include partials/scripts.ejs %>
+  <script src="./javascripts/about.js"></script>
 </body>
 
 </html>
