--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <%- include partials/head.ejs %>
-  <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="stylesheets/contact.css">
 
   <title>Home | Trevv's Portfolio v0.2</title>
 </head>
