--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -33,7 +33,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link active" href="Trevor Njeru, Resume 2019.pdf">Resume</a>
+          <a class="nav-link active" href="Trevor Njeru, Resume 2019.pdf" target="_blank">Resume</a>
         </li>
 
       </ul>
