--- a/views/user/forgot.ejs
+++ b/views/user/forgot.ejs
@@ -10,8 +10,8 @@
       <!--Header-->
       <%- include ../partials/header.ejs %>
       
-      <form id="userForm" method="POST" action="/user/resetpassword">
-        <input id="emailField" type="email" name="email" placeholder="Email"/>
+      <form id="userForm" method="POST" action="/users/resetpassword">
+        <input class="emailField" type="email" name="email" placeholder="Email"/>
         <a href="/user/signin"><p id="forgotLink">Already a user? Sign In!</p></a>
         <input id="submitBtn" type="submit" value="Submit"/>
       </form>
