--- a/views/user/signout.ejs
+++ b/views/user/signout.ejs
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <% include ../partials/adminHead.ejs %>
-    
+    <% include ../partials/head.ejs %>
+    <link rel="stylesheet" href="/stylesheets/user.css">
   </head>
   <body>
-    
     <main>
       <!--Header-->
-      <%- include ../partials/header.ejs %>
       
       <h3 id="signOutMessage">You have been signed out.</h3>
             
             
     </main>
-    
-    
-    
     <% include ../partials/footer.ejs %>
   </body>
 </html>
