--- a/views/user/changePw.ejs
+++ b/views/user/changePw.ejs
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <% include ../partials/adminHead.ejs %>
-    
+    <% include ../partials/head.ejs %>
+    <link rel="stylesheet" href="/stylesheets/user.css">
   </head>
   <body>
     
     <main>
       <!--Header-->
-      <%- include ../partials/header.ejs %>
       
       <form id="userForm" method="POST" action="/users/changepassword">
-        <input class="emailField" type="email" name="password" placeholder="Password"/>
-        <input class="emailField" type="email" name="verifyPassword" placeholder="Verify Password"/>
+        <input id="emailField" type="email" name="password" placeholder="Password"/>
+        <input id="emailField" type="email" name="verifyPassword" placeholder="Verify Password"/>
         <a href="/user/signin"><p id="forgotLink">You can still Sign In</p></a>
         <input id="submitBtn" type="submit" value="Reset"/>
       </form>
