--- a/views/work.ejs
+++ b/views/work.ejs
@@ -11,33 +11,65 @@
 
   <!-- Work Section -->
   <div class="workHeader container">
-
     <div class="row">
-
-
-
+      <h2>Work</h2>
+      <!-- 
       <div class="work-cards text-nowrap">
-        <h2>Work</h2>
+        
         <a href="#" class="btn btn-success">UI Design</a>
         <a href="#" class="btn btn-success">Web Dev</a>
         <a href="#" class="btn btn-success">Work</a>
         <a href="#" class="btn btn-success">Projects</a>
       </div>
+      -->
 
     </div>
     <!-- End Work Header Section -->
 
+    <% Projects.forEach(function (proj) {%>
+      <!-- Work Cards -->
+      <div class="row p-6">
+        <!-- 
+        <div class="back">
+          <a href=""><img src="images/Back-Icon.png" alt=""><h5>Web Dev</h5></a>
+        </div>
+        -->
 
-    <!-- Work Cards -->
-    <div class="row">
-      <div class="back">
-        <a href=""><img src="images/Back-Icon.png" alt=""><h5>Web Dev</h5></a>
+        <div class="card mb-5 d-flex justify-content-center">
+          <div class="card-img">
+            <img class="rounded img-fluid" src="/images/ProjImg.png" alt="Work Image">
+          </div>
+
+          <div class="card-details">
+            <h1 class="title"><strong><%= proj.name %></strong></h1>
+            <p class="date"><%= new Date(proj.pub_date).toDateString() %></p>
+            <div class="icons">
+              <ul>
+                <li><a href="<%= proj.code_link %>" class="link"><img src="images/Proj-Github-Icon.png" alt="Github"></a></li>
+                <li><a href="<%= proj.demo_link %>" class="link"><img src="images/Proj-Link-Icon.png" alt="Demo"></a></li>
+              </ul>
+            </div>
+            <p class="work-desc">This is a website showing some basic js and design skills.</p>
+          </div>
+
+          <h5>Built With</h5>
+
+          <div class="skill-list">
+            <div class="skill">
+              <h5>HTML</h5>
+            </div>
+            <div class="skill">
+              <h5>CSS</h5>
+            </div>
+            <div class="skill">
+              <h5>JS</h5>
+            </div>
+          </div>
+
+        </div>
+        <!-- End Work Cards -->
       </div>
-
-      <%- include partials/workCards.ejs %>
-
-    </div>
-    <!-- End Work Cards -->
+    <% }); %>
 
 
   </div>
