--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,7 +5,7 @@
 
     <!-- Copyright -->
     <div class="footer-copyright text-center">
-      <a href="/">Trevor Njeru</a> © 2019.
+      <p>&copy; <%= new Date(Date.now()).getUTCFullYear() %> <a href="/">Trevor Njeru</a>.</p>
     </div>
     <!-- End Copyright -->
 
