--- a/views/work.ejs
+++ b/views/work.ejs
@@ -35,7 +35,7 @@
         </div>
         -->
 
-        <div class="card mb-5 d-flex justify-content-center">
+        <div class="card ml-5 mb-5 d-flex justify-content-center">
           <div class="card-img">
             <img class="rounded img-fluid" src="/images/ProjImg.png" alt="Work Image">
           </div>
@@ -67,8 +67,9 @@
           </div>
 
         </div>
-        <!-- End Work Cards -->
+        
       </div>
+      <!-- End Work Cards -->
     <% }); %>
 
 
@@ -77,12 +78,7 @@
 
 
   <%- include partials/sidebar.ejs %>
-
-
   <%- include partials/footer.ejs %>
-
-
-  <%- include partials/scripts.ejs %>
 </body>
 
 </html>
