--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,11 +1,11 @@
 <!-- Sidebar -->
 <div class="sidebar">
   <ul>
-    <li><a href="mailto:trevnjeru@gmail.com?subject=Portfolio"><img src="images/Gmail Icon.png" alt="Email"></a></li>
-    <li><a href="https://www.instagram.com/iamtrevvn"><img src="images/Instagram Icon.png" alt="Instagram"></a></li>
-    <li><a href="https://www.github.com/trevv16"><img src="images/Github Icon.png" alt="GitHub"></a></li>
-    <li><a href="https://wwww.linkedin.com/in/trevornjeru/"><img src="images/LinkedIn Icon.png" alt="Linked In"></a></li>
-    <li><a id="sideLine" href="#"><img src="images/HrzLine.png"></a></li>
+    <a href="mailto:trevnjeru@gmail.com?subject=Portfolio"><li><img src="images/Gmail Icon.png" alt="Email"></li></a>
+    <a href="https://www.instagram.com/iamtrevvn"><li><img src="images/Instagram Icon.png" alt="Instagram"></li></a>
+    <a href="https://www.github.com/trevv16"><li><img src="images/Github Icon.png" alt="GitHub"></li></a>
+    <a href="https://wwww.linkedin.com/in/trevornjeru/"><li><img src="images/LinkedIn Icon.png" alt="Linked In"></li></a>
+    <a id="sideLine" href="#"><li><img src="images/HrzLine.png"></li></a>
   </ul>
 </div>
 <!-- End Sidebar -->
