updated resume and work page

--- a/public/stylesheets/work.css
+++ b/public/stylesheets/work.css
@@ -1,109 +1,93 @@
-
 .back {
-  display: inline-flex;
-  height: 30px;
-  margin-right: 20px;
-  width: auto;
-
+    display: inline-flex;
+    height: 30px;
+    margin-right: 20px;
+    width: auto;
 }
 
-.back h5{
-  color: #7F8496;
-  margin-left: 15px;
-  font-size: 20px;
+.back h5 {
+    color: #7F8496;
+    margin-left: 15px;
+    font-size: 20px;
 }
 
 .card {
-
-  background-color: #222F3E;
-  border: none;
-  border-radius: 10px;
-  color: white;
-  height: auto;
-  padding: 25px;
-  width: 750px;
+    background-color: #222F3E;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    height: auto;
+    padding: 25px;
+    width: 750px;
 }
 
 .card-img {
-  max-width: 450px;
-  height: auto;
-  border-radius: 20px;
+    max-width: 450px;
+    height: auto;
+    border-radius: 20px;
 }
 
-/* .card .card-img {
-
-  justify-content: center;
-} */
+.rounded img {
+    /* content: ""; */
+    background: rgba(238, 108, 77, 0.64);
+    z-index: 999;
+}
 
 .card .title {
-
-  font-size: 38px;
+    font-size: 38px;
 }
 
 .card .date {
-
-  color: #EE6C4D;
+    color: #EE6C4D;
 }
 
-
-.icons ul{
-
-  display: inline-flex;
-  list-style: none;
-
+.icons ul {
+    display: inline-flex;
+    list-style: none;
 }
 
 .icons img {
-
-  margin-left: -40px;
-  margin-right: 80px;
-  width: 25px;
-  height: auto;
+    margin-left: -40px;
+    margin-right: 80px;
+    width: 25px;
+    height: auto;
 }
 
 .skill-list {
-
-  display: inline-flex;
-  justify-content: space-between;
+    display: inline-flex;
+    justify-content: space-between;
 }
 
 .skill {
-
-  color: #EE6C4D;
-  padding: 25px 30px;
+    color: #EE6C4D;
+    padding: 25px 30px;
 }
 
-
 .workHeader {
-
-  margin-left: 150px;
-  margin-top: 100px;
+    margin-left: 150px;
+    margin-top: 100px;
 }
 
 .work h2 {
-
-  margin-bottom: 50px;
+    margin-bottom: 50px;
 }
 
 .work-cards {
-
-  margin-bottom: 75px;
+    margin-bottom: 75px;
 }
 
 .work-cards a {
-
-  font-size: 38px;
-  margin-right: 25px;
-  max-height: 205px;
-  max-width: 255px;
-  overflow: auto;
-  padding: 50px 10px;
-  width: 220px;
-  background-color: #222E50;
-  border: none;
+    font-size: 38px;
+    margin-right: 25px;
+    max-height: 205px;
+    max-width: 255px;
+    overflow: auto;
+    padding: 50px 10px;
+    width: 220px;
+    background-color: #222E50;
+    border: none;
 }
 
 .work-cards a:hover {
-
-  background-color: #EE6C4D;
+    background-color: #EE6C4D;
 }
