missing partial for jquery

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -33,6 +33,7 @@
 
   <%- include partials/sidebar.ejs %>
   <%- include partials/footer.ejs %>
+  <%- include partials/scripts.ejs %>
 </body>
 
 </html>
