--- a/views/project.ejs
+++ b/views/project.ejs
@@ -53,6 +53,7 @@
 
   <%- include partials/sidebar.ejs %>
   <%- include partials/footer.ejs %>
+  <%- include partials/scripts.ejs %>
 </body>
 
 </html>
