--- a/views/work.ejs
+++ b/views/work.ejs
@@ -79,6 +79,7 @@
 
   <%- include partials/sidebar.ejs %>
   <%- include partials/footer.ejs %>
+  <%- include partials/scripts.ejs %>
 </body>
 
 </html>
