--- a/views/about.ejs
+++ b/views/about.ejs
@@ -78,7 +78,8 @@
 
 
     <%- include partials/footer.ejs %>
-    <script src="./javascripts/about.js"></script>
+    <%- include partials/scripts.ejs %>
+    <script src="../javascripts/about.js"></script>
 </body>
 
 </html>
