--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,7 @@
 
   <%- include partials/sidebar.ejs %>
   <%- include partials/footer.ejs %>
+  <%- include partials/scripts.ejs %>
 </body>
 
 </html>
