added cdn links for deployment

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -31,7 +31,7 @@
                 <div class="col-8 col-md-6 col-sm-8">
                     <!-- About Me Image -->
                     <div class="aboutImg img-responsive">
-                        <img src="images/aboutMeImg.png" alt="">
+                        <img src="https://elasticbeanstalk-us-east-2-257945705175.s3.us-east-2.amazonaws.com/portofolio-v1.0/aboutMeImg.png" alt="">
                     </div>
                 </div>
 
