--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,7 +27,7 @@
 
           <!-- Profile Image -->
           <div class="profile-img float-right">
-            <img src="images/ProfilePic.png" alt="">
+            <img src="https://elasticbeanstalk-us-east-2-257945705175.s3.us-east-2.amazonaws.com/portofolio-v1.0/ProfilePic.png" alt="">
           </div>
           <!-- End Profile Image -->
         <!-- </div> -->
