--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,7 +3,7 @@
 
   <!-- Logo Image -->
   <a class="navbar-brand" href="/">
-    <img src="images/LOGO.png" width="50" height="50" alt="">
+    <img src="https://elasticbeanstalk-us-east-2-257945705175.s3.us-east-2.amazonaws.com/portofolio-v1.0/LOGO.png" width="50" height="50" alt="">
   </a>
 
 
