--- a/views/partials/workCards.ejs
+++ b/views/partials/workCards.ejs
@@ -1,7 +1,7 @@
 <div class="card">
 
   <div class="card-img">
-    <img class="rounded img-fluid" src="/images/ProjImg.png" alt="Work Image">
+    <img class="rounded img-fluid" src="https://elasticbeanstalk-us-east-2-257945705175.s3.us-east-2.amazonaws.com/portofolio-v1.0/ProjImg.png" alt="Work Image">
   </div>
 
   <div class="card-details">
@@ -9,8 +9,8 @@
     <p class="date">Apr 4th, 2019</p>
     <div class="icons">
       <ul>
-        <li><a href="#" class="link"><img src="images/Proj-Github-Icon.png" alt="Github"></a></li>
-        <li><a href="#" class="link"><img src="images/Proj-Link-Icon.png" alt="Demo"></a></li>
+        <li><a href="#" class="link"><img src="https://elasticbeanstalk-us-east-2-257945705175.s3.us-east-2.amazonaws.com/portofolio-v1.0/Proj-Github-Icon.png" alt="Github"></a></li>
+        <li><a href="#" class="link"><img src="https://elasticbeanstalk-us-east-2-257945705175.s3.us-east-2.amazonaws.com/portofolio-v1.0/Proj-Link-Icon.png" alt="Demo"></a></li>
       </ul>
     </div>
     <p class="work-desc">This is a website showing some basic js and design skills.</p>
