--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,11 +1,11 @@
 <!-- Sidebar -->
 <div class="sidebar">
   <ul>
-    <a href="mailto:trevnjeru@gmail.com?subject=Portfolio"><li><img src="images/Gmail Icon.png" alt="Email"></li></a>
-    <a href="https://www.instagram.com/iamtrevvn"><li><img src="images/Instagram Icon.png" alt="Instagram"></li></a>
-    <a href="https://www.github.com/trevv16"><li><img src="images/Github Icon.png" alt="GitHub"></li></a>
-    <a href="https://wwww.linkedin.com/in/trevornjeru/"><li><img src="images/LinkedIn Icon.png" alt="Linked In"></li></a>
-    <a id="sideLine" href="#"><li><img src="images/HrzLine.png"></li></a>
+    <a href="mailto:trevnjeru@gmail.com?subject=Portfolio"><li><img src="https://elasticbeanstalk-us-east-2-257945705175.s3.us-east-2.amazonaws.com/portofolio-v1.0/Gmail+Icon.png" alt="Email"></li></a>
+    <a href="https://www.instagram.com/iamtrevvn"><li><img src="https://elasticbeanstalk-us-east-2-257945705175.s3.us-east-2.amazonaws.com/portofolio-v1.0/Instagram+Icon.png" alt="Instagram"></li></a>
+    <a href="https://www.github.com/trevv16"><li><img src="https://elasticbeanstalk-us-east-2-257945705175.s3.us-east-2.amazonaws.com/portofolio-v1.0/Github+Icon.png" alt="GitHub"></li></a>
+    <a href="https://wwww.linkedin.com/in/trevornjeru/"><li><img src="https://elasticbeanstalk-us-east-2-257945705175.s3.us-east-2.amazonaws.com/portofolio-v1.0/LinkedIn+Icon.png" alt="Linked In"></li></a>
+    <a id="sideLine" href="#"><li><img src="https://elasticbeanstalk-us-east-2-257945705175.s3.us-east-2.amazonaws.com/portofolio-v1.0/HrzLine.png"></li></a>
   </ul>
 </div>
 <!-- End Sidebar -->
