--- a/views/work.ejs
+++ b/views/work.ejs
@@ -55,10 +55,10 @@
           <h5>Built With</h5>
 
           <%
-          function getImgBySkill([skills]) {
-              var skillImgs = [];
-              skills.forEach(function (skill) {
-                  switch (skill.toLowerCase()) {
+          function getImgBySkill(sks) {
+            let skillImgs = [];
+              sks.forEach(function (obj) {
+                  switch (obj.skill.toLowerCase()) {
                       case 'html':
                           skName = "https://elasticbeanstalk-us-east-2-257945705175.s3.us-east-2.amazonaws.com/portfolioimages/html.png";
                           skillImgs.push(skName);
@@ -114,17 +114,15 @@
               console.log("list", skillImgs);
           }
           %>
-          <% var skills = new Array(getImgBySkill(proj.skills_used))%>
+          <% let skills = new Array(getImgBySkill([...proj.skills_used])) %>
           <% console.log("skills", skills); %>
-
-          <div class="skill-list">
-            <% skills.forEach(function (skill) { %>
-              <div class="skill">
-                <img src="<%= skill %>">
-              </div>
-            <% }); %>
-          </div>
-
+            <div class="skill-list">
+              <% skills.forEach(function (skill) { %>
+                <div class="skill">
+                  <img src="<%- skill %>">
+                </div>
+              <%})%>
+            </div>
         </div>
         
       </div>
